namespaces/live.cloud-platform.service.justice.gov.uk/laa-criminal-applications-datastore-staging/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-apply-for-criminal-legal-aid-staging
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: laa-apply-for-criminal-legal-aid-staging
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-review-criminal-legal-aid-staging
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: laa-review-criminal-legal-aid-staging
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-crime-applications-adaptor-staging
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: laa-crime-applications-adaptor-staging
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-crime-applications-adaptor-uat
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: laa-crime-applications-adaptor-uat
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-crime-applications-adaptor-dev
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: laa-crime-applications-adaptor-dev
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: laa-criminal-applications-datastore-staging
spec:
  podSelector:
    matchLabels:
      app: laa-criminal-applications-datastore-web-staging
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: block-egress
  namespace: laa-criminal-applications-datastore-staging
spec:
  order: 50.0
  selector: all()
  egress:
  - action: Deny
  types:
  - Egress
